@startuml diagrama de classes

class Member {
    + user: User
    + recompensas: int

    + enviarConvite(emailDestinatario: String): Convite
    + contarConvitesMesAtual(): int
    + verificarConvitesAceitos(): void
    + enviarFeedback(feedbackTexto: String, tipo: String): Feedback
    + listarFeedbacks(): List<Feedback>
}

class Convite {
    + userRemetente: Member
    + userDestinatario: String
    + link: String
    + dataEnvio: Date
    + status: String

    + isExpirado(): Boolean
}

class Feedback {
    + member: Member
    + feedback: String
    + tipo: String
    + data: Date

    + classificarFeedback(): String
    + analisarFeedback(): void
}

User <|-- Member
Member "1" --> "many" Convite
Member "1" --> "many" Feedback

@enduml


